# repo2obsidean

./: .gitignore  LICENSE  README.md  pyproject.toml  update_whell.sh
.claude/: settings.local.json
app/: __init__.py  cli.py  git_utils.py
app/generator/: slug.py  vault.py
app/generator/templates/: class.md.j2  function.md.j2  method.md.j2
app/graph/: builder.py
app/parser/: base.py  tree_sitter_parser.py
docs/: graph-changed.png.txt
obsidean-vault/.obsidian/: graph.json  workspace.json
obsidean-vault/Notes/: MOC-python.md  index.md  recent-changes.md
obsidean-vault/Notes/python/app/cli/: _build_vault.md  _detect_languages.md  _fake_test.md  _iter_source_files.md  _matches_any.md  _stamp_git_changes.md  main.md
obsidean-vault/Notes/python/app/git_utils/: ChangeInfo.md  Hunk.md  _git.md  _parse_unified_diff.md  diff_for_lines.md  get_working_tree_changes.md  is_git_repo.md
obsidean-vault/Notes/python/builtins/: InheritedClass.md  InheritedClass__special_greet.md  Language.md  MyClass.md  MyClass____init__.md  MyClass__greet.md  MyClass__upper_name.md  Parser.md  Parser__parse.md  Symbol.md  SymbolGraph.md  SymbolGraph____init__.md  SymbolGraph___distance_to.md  SymbolGraph___resolve_call.md  SymbolGraph___resolve_name.md  SymbolGraph__add_edge.md  SymbolGraph__add_symbol.md  SymbolGraph__build_from_symbols.md  SymbolGraph__export_symbols.md  SymbolGraph__get_callees.md  SymbolGraph__get_callers.md  SymbolGraph__get_related_symbols.md  SymbolKind.md  TreeSitterParser.md  TreeSitterParser____init__.md  TreeSitterParser___clean_docstring.md  TreeSitterParser___extract_calls.md  TreeSitterParser___field_text.md  TreeSitterParser___go_doc_comment.md  TreeSitterParser___go_receiver.md  TreeSitterParser___line_signature.md  TreeSitterParser___load_parser.md  TreeSitterParser___python_base_classes.md  TreeSitterParser___python_decorators.md  TreeSitterParser___python_docstring.md  TreeSitterParser___snippet.md  TreeSitterParser___walk_calls.md  TreeSitterParser___walk_go.md  TreeSitterParser___walk_python.md  TreeSitterParser__parse_file.md  (+25 more)
obsidean-vault/Notes/python/repo2obsidean/cli/: _build_vault.md  _detect_languages.md  _fake_test.md  _iter_source_files.md  _matches_any.md  _stamp_git_changes.md  main.md
obsidean-vault/Notes/python/repo2obsidean/git_utils/: ChangeInfo.md  Hunk.md  _git.md  _parse_unified_diff.md  diff_for_lines.md  get_working_tree_changes.md  is_git_repo.md
repo2obsidean/: __init__.py  cli.py  git_utils.py
repo2obsidean/generator/: slug.py  vault.py
repo2obsidean/generator/templates/: function.md.j2  method.md.j2
repo2obsidean/graph/: builder.py
repo2obsidean/parser/: base.py  tree_sitter_parser.py
repo2obsidean/parser/queries/: python.scm
scripts/: animate_graph.py  release.py
tests/fixtures/: go_routes.go  js_routes.js  odoo_models.py  routes.py  sample.js  sample_python.py
tests/unit/: test_git_and_filters.py  test_odoo_inheritance.py  test_parser_js.py  test_parser_python.py  test_routes.py
(+128 files in other folders)
