[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo2obsidean"
version = "0.1.1"
description = "Transform code repositories into Obsidian vaults—one note per class and method."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
# TODO: set your real name/email before publishing (this becomes public on PyPI).
authors = [{ name = "Obsidean contributors" }]
keywords = ["obsidian", "code", "documentation", "tree-sitter", "knowledge-graph", "odoo", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # tree-sitter 0.21.x + tree-sitter-languages 1.10.x is the last combo with
    # a stable prebuilt-grammar API across Python 3.11/3.12. Newer tree-sitter
    # changed the Parser/Language constructor and breaks tree-sitter-languages.
    "tree-sitter>=0.20.4,<0.22",
    "tree-sitter-languages>=1.9,<1.11",
    "networkx>=3.3",
    "Jinja2>=3.1",
    "pydantic>=2.8",
    "pydantic-settings>=2.2",
    "click>=8.1",
    "gitpython>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
]
redis = [
    "arq>=0.26",
    "redis>=5.0",
]
db = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]
storage = [
    "boto3>=1.34",
]
viz = [
    # For scripts/animate_graph.py (animated GIF of the symbol graph).
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "syrupy>=4.6",
]

[project.scripts]
repo2obsidean = "repo2obsidean.cli:main"
obsidean = "repo2obsidean.cli:main"   # short alias

[project.urls]
# TODO: replace with your real repository URL before publishing.
Homepage = "https://github.com/your-org/obsidean"
Repository = "https://github.com/your-org/obsidean"
Issues = "https://github.com/your-org/obsidean/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]

[tool.hatch.build.targets.wheel]
packages = ["repo2obsidean"]

[tool.hatch.build.targets.sdist]
# Keep the source distribution lean: ship ONLY the package + tests + scripts
# (pyproject/README/LICENSE are always added). Excludes the generated vault,
# the demo GIF, and other local artifacts even though they're git-tracked.
only-include = ["repo2obsidean", "tests", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"
